更改java内存分配